# distillchat

./: .env.example  .gitignore  Dockerfile.agent  README.md  ai.py  app.py  config.yaml.example  db.py  plugins.py  pyproject.toml  requirements.txt  tools.py
static/css/: about.css  auth.css  base.css  katex.css  onboarding.css  projects.css  recents.css  settings.css  sidebar.css  style.css  theme.css
static/js/: attachments.js  chat.js  import.js  katex.js  marked.js  messages.js  model.js  onboarding.js  project.js  projects.js  recents.js  script.js  settings.js  state.js  stream.js  toasts.js  utils.js
templates/: about.html  auth.html  base.html  chat.html  chat_input.html  import.html  macros.html  new_chat.html  new_project.html  onboarding.html  project.html  projects.html  recents.html  settings.html  sidebar.html
