[project]
name = "distillchat"
version = "0.1.0"
description = "A fast and lightweight AI chat app that doesn't compromise on aesthetics."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.89.0",
    "fastapi[standard]>=0.135.3",
    "openai>=2.30.0",
    "pwdlib[argon2]>=0.3.0",
    "pyaml-env>=1.2.2",
    "pyjwt>=2.12.1",
]
